# odin

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
odin/: CMakeLists.txt
odin/app/: CMakeLists.txt  main.c
odin/core/: CMakeLists.txt  config.h
odin/core/include/: odin.core.config.h
odin/core/include/odin/: core.h
odin/core/include/odin/core/: core.h  exports.h  memory.h  object.h
odin/core/include/odin/core/buffers/: buffer.h  static.h
odin/core/include/odin/core/streams/: memory.h  stream.h
odin/core/lib/: memory.c
odin/core/lib/streams/: memory.c
odin/core/src/: memory.c
odin/core/src/streams/: memory.c  stream.c
odin/net/: CMakeLists.txt  config.h
odin/net/include/: odin.net.config.h
odin/net/include/odin/: net.h
odin/net/include/odin/net/: exports.h  net.h  types.h
odin/net/include/odin/net/packets/: ip.h  tcp.h
odin/plugins/: CMakeLists.txt
